--- a/register/register.html
+++ b/register/register.html
@@ -20,6 +20,7 @@
                 <li><a href="#" id="register">Regisztrálj</a></li>
                 <li><a href="" id="">Bejelentkezés</a></li>
             </ul>
+         let asd = document.createElement   
         </nav>
         <article>
             <div class="container">
