--- a/login/login.html
+++ b/login/login.html
@@ -29,14 +29,11 @@
                       <h3>Regisztráció</h3>
                       <p>Kérem töltse ki ezt az űrlapot a regisztráláshoz.</p>
                       <hr>
-                      <label style="margin: 10px;" for="email"><b>Email Cím</b></label>
-                      <input type="text" placeholder="Email Cím" name="email" id="email" required>
+                      <label style="margin: 10px;" for="username"><b>Felhasználónév</b></label>
+                      <input type="text" placeholder="Felhasználónév" name="username" id="username" required>
                       <br>
                       <label style="margin: 10px;" for="psw"><b>Jelszó</b></label>
                       <input type="password" placeholder="Jelszó" name="psw" id="password" required>
-                      <br>
-                      <label style="margin: 10px;" for="psw-repeat"><b>Jelszó Ismétlése</b></label>
-                      <input type="password" placeholder="Jelszó Ismétlése" name="psw-repeat" id="psw-repeat" required>
                       <hr>
                       <p>A fiók létrehozásával elfogadásra kerülnek a <a href="aggreement.html">Szerződési Feltételek.</a>.</p>
                       <button type="submit" class="registerbtn">Regisztrálás</button>
