--- a/login/login.html
+++ b/login/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <title>Ételfutár - Bejelentkezés</title>
 </head>
 <body>
     <main>
@@ -15,10 +15,14 @@
         <nav>
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
-                <li><a href="../cart/cart.html">Kosár</a></li>
-                <li><a href="">Nyelv</a></li>
-                <li><a href="#" id="register">Regisztrálj</a></li>
-                <li><a href="" id="">Bejelentkezés</a></li>
+                <li><a href="./index.html">Főoldal</a></li>
+                <li><a href="./cart/cart.html">Kosár</a></li>
+                <li><select class="language_select">
+                    <option value="lang_hu">HU</option>
+                    <option value="lang_en">EN</option>
+                </select></li>
+                <li><a href="../register/register.html" id="register">Regisztrálj</a></li>
+                <li><a href="../login/login.html" id="">Bejelentkezés</a></li>
             </ul>
            
         </nav>
@@ -26,8 +30,7 @@
             <div class="container">
                 <form action="action_page.php">
                     <div class="container">
-                      <h3>Regisztráció</h3>
-                      <p>Kérem töltse ki ezt az űrlapot a regisztráláshoz.</p>
+                      <h3>Bejelentkezés</h3>
                       <hr>
                       <label style="margin: 10px;" for="username"><b>Felhasználónév</b></label>
                       <input type="text" placeholder="Felhasználónév" name="username" id="username" required>
@@ -35,6 +38,7 @@
                       <label style="margin: 10px;" for="psw"><b>Jelszó</b></label>
                       <input type="password" placeholder="Jelszó" name="psw" id="password" required>
                       <hr>
+                      <button type="submit" class="loginbtn">Bejelentkezés</button>
                     </div>
                     <div class="container signin">
                       <p>Már van fiókja? <a href="login.html">Jelentkezzen be</a>.</p>
