--- a/register/register.html
+++ b/register/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <title>Document</title>
+    <title>Ételfutár - Regisztrálás</title>
 </head>
 <body>
     <main>
@@ -15,10 +15,14 @@
         <nav>
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
-                <li><a href="../cart/cart.html">Kosár</a></li>
-                <li><a href="">Nyelv</a></li>
-                <li><a href="#" id="register">Regisztrálj</a></li>
-                <li><a href="" id="">Bejelentkezés</a></li>
+                <li><a href="./index.html">Főoldal</a></li>
+                <li><a href="./cart/cart.html">Kosár</a></li>
+                <li><select>
+                    <option value="lang_hu">HU</option>
+                    <option value="lang_en">EN</option>
+                </select></li>
+                <li><a href="../register/register.html" id="register">Regisztrálj</a></li>
+                <li><a href="../login/login.html" id="">Bejelentkezés</a></li>
             </ul>
            
         </nav>
