--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <main>
         <header>
-            <a href="./index.html">Title</a>
+            <a href="./index.html">Ételfutár®</a>
         </header>
         <nav>
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
                 <li><a href="./index.html">Főoldal</a></li>
                 <li><a href="./cart/cart.html">Kosár</a></li>
-                <li><select>
+                <li><select class="language_select">
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
