újabb nav frissítés

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -14,11 +14,15 @@
         </header>
         <nav>
             <ul>
-                <li><a href="">Kereső</a></li>
-                <li><a href="#">Bejelentkezés</a></li>
-                <li><a href="../register/register.html">Regisztrálj</a></li>
-                <li><a href="">Nyelv</a></li>
-                <li><a href="#">Kosár</a></li>
+              <li id="left"><input type="text" placeholder="Keresés.."></li>
+              <li><a class="nav_selected" href="../cart/cart.html">Kosár</a></li>
+              <li><select class="language_select">
+                  <option value="lang_hu">HU</option>
+                  <option value="lang_en">EN</option>
+              </select></li>
+              <li><a href="../register/register.html" id="register">Regisztrálj</a></li>
+              <li><a href="../login/login.html" id="">Bejelentkezés</a></li>
+              <li><a href="../index.html">Főoldal</a></li>
             </ul>
             
         </nav>
