--- a/login/login.html
+++ b/login/login.html
@@ -15,14 +15,14 @@
         <nav>
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
-                <li><a href="./index.html">Főoldal</a></li>
-                <li><a href="./cart/cart.html">Kosár</a></li>
+                <li><a href="../cart/cart.html">Kosár</a></li>
                 <li><select class="language_select">
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
                 <li><a href="../register/register.html" id="register">Regisztrálj</a></li>
-                <li><a href="../login/login.html" id="">Bejelentkezés</a></li>
+                <li><a class="nav_selected" href="../login/login.html" id="">Bejelentkezés</a></li>
+                <li><a href="../index.html">Főoldal</a></li>
             </ul>
            
         </nav>
