--- a/register/register.html
+++ b/register/register.html
@@ -18,7 +18,7 @@
                 <li><a href="../cart/cart.html">Kosár</a></li>
                 <li><a href="">Nyelv</a></li>
                 <li><a href="#" id="register">Regisztrálj</a></li>
-                <li><a href="" id="">Bejelentkezés</a></li>
+                <li><a href="#" id="login">Bejelentkezés</a></li>
             </ul>
         </nav>
         <article>
@@ -41,11 +41,12 @@
                       <button type="submit" class="registerbtn">Regisztrálás</button>
                     </div>
                     <div class="container signin">
-                      <p>Már van fiókja? <a href="login.html">Jelentkezzen be</a>.</p>
+                      <p>Már van fiókja? <a href="#" class="loginFasz">Jelentkezzen be</a>.</p>
                     </div>
                 </form>
             </div>
         </article>
+        <div id="here"></div>
         <footer>
             <p>2024 Ételfutár® - Minden jog fenntartva.</p>
         </footer>
