--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="./cart/cart.html">Kosár</a></li>
                 <li><a href="">Nyelv</a></li>
                 <li><a href="./register/register.html" id="register">Regisztrálj</a></li>
-                <li><a href="#" id="login">Bejelentkezés</a></li>
+                <li><a href="#" class="login">Bejelentkezés</a></li>
             </ul>
         </nav>
         <article>
