--- a/register/register.html
+++ b/register/register.html
@@ -15,14 +15,13 @@
         <nav>
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
-                <li><a href="../cart/cart.html">Kosár</a></li>
-                <li><select class="language_select">
+                <li id="cart">Kosár</li>
+                <li><select>
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
-                <li><a class="nav_selected" href="../register/register.html" id="">Regisztrálj</a></li>
-                <li><a href="../login/login.html" id="">Bejelentkezés</a></li>
-                <li><a href="../index.html">Főoldal</a></li>
+                <li class="special"><a href="./register/register.html">Regisztrálj</a></li>
+                <li id="login">Bejelentkezés</li>
             </ul>
            
         </nav>
