navbar fejlesztés másodszor

--- a/login/login.html
+++ b/login/login.html
@@ -21,7 +21,7 @@
                     <option value="lang_en">EN</option>
                 </select></li>
                 <li><a href="../register/register.html" id="register">Regisztrálj</a></li>
-                <li><a class="nav_selected" href="../login/login.html" id="">Bejelentkezés</a></li>
+                <li class="nav_selected"><a href="../login/login.html" id="">Bejelentkezés</a></li>
                 <li><a href="../index.html">Főoldal</a></li>
             </ul>
            
