--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
                 <li id="cart">Kosár</li>
-                <li><select>
+                <li><select class="language_select">
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
                 <li class="special"><a href="./register/register.html">Regisztrálj</a></li>
-                <li id="login">Bejelentkezés</li>
+                <li id="login"><a href="./login/login.html">Bejelentkezés</a></li>
+                <li class="nav_selected"><a href="../index.html">Főoldal</a></li>
             </ul>
         </nav>
         <div id="panel"></div>
