register and index

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <option value="lang_en">EN</option>
                 </select></li>
                 <li class="special"><a href="./register/register.html">Regisztrálj</a></li>
-                <li id="login"><a href="./login/login.html">Bejelentkezés</a></li>
-                <li class="nav_selected"><a href="../index.html">Főoldal</a></li>
+                <li id="login">Bejelentkezés</li>
+                <li class="nav_selected"><a href="./index.html">Főoldal</a></li>
             </ul>
         </nav>
         <div id="panel"></div>
