--- a/register/register.html
+++ b/register/register.html
@@ -21,7 +21,7 @@
                     <option value="lang_en">EN</option>
                 </select></li>
                 <li class="nav_selected"><a href="../register/register.html">Regisztrálj</a></li>
-                <li id="login"><a href="../login/login.html">Bejelentkezés</a></li>
+                <li class="login">Bejelentkezés</li>
                 <li><a href="../index.html">Főoldal</a></li>
             </ul>
            
@@ -46,7 +46,7 @@
                       <button type="submit" class="registerbtn">Regisztrálás</button>
                     </div>
                     <div class="container signin">
-                      <p>Már van fiókja? <a href="#" class="loginFasz">Jelentkezzen be</a>.</p>
+                      <p>Már van fiókja? <span class="login">Jelentkezzen be</span>.</p>
                     </div>
                 </form>
             </div>
