register and index

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
-                <li class="special"><a href="./register/register.html">Regisztrálj</a></li>
+                <li class="special" onclick="location.href='./register/register.html';">Regisztrálj</li>
                 <li id="login">Bejelentkezés</li>
-                <li class="nav_selected"><a href="./index.html">Főoldal</a></li>
+                <li class="nav_selected" onclick="location.href='./index.html';">Főoldal</li>
             </ul>
         </nav>
         <div id="panel"></div>
