--- a/register/register.html
+++ b/register/register.html
@@ -20,9 +20,9 @@
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
-                <li class="nav_selected"><a href="../register/register.html">Regisztrálj</a></li>
+                <li class="nav_selected" onclick="location.href='../register/register.html';">Regisztrálj</a></li>
                 <li class="login">Bejelentkezés</li>
-                <li><a href="../index.html">Főoldal</a></li>
+                <li onclick="location.href='../index.html';">Főoldal</li>
             </ul>
            
         </nav>
