bejelentkezés és regisztráció panel elkészítve

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
-                <li class="special" onclick="location.href='./register/register.html';">Regisztrálj</li>
-                <li id="login">Bejelentkezés</li>
+                <li id="register" class="special">Regisztrálj</li>
+                <li id="login" class="special">Bejelentkezés</li>
                 <li class="nav_selected" onclick="location.href='./index.html';">Főoldal</li>
             </ul>
         </nav>
