bejelentkezés és regisztráció angolul is

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
-                <li id="cart">Kosár</li>
-                <li><select class="language_select">
+                <li id="cart" class="special">Kosár</li>
+                <li><select id="language_select" class="language_select">
                     <option value="lang_hu">HU</option>
                     <option value="lang_en">EN</option>
                 </select></li>
