--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li id="left"><input type="text" placeholder="Keresés.."></li>
                 <li id="cart" class="special">Kosár</li>
                 <li><select id="language_select" class="language_select">
-                    <option value="lang_hu">HU</option>
-                    <option value="lang_en">EN</option>
+                    <option value="HU">HU</option>
+                    <option value="EN">EN</option>
                 </select></li>
                 <li id="register" class="special">Regisztrálj</li>
                 <li id="login" class="special">Bejelentkezés</li>
