--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <nav>
             <ul>
-                <li id="search"><input id="search_input" type="text" placeholder="Keresés.."></li>
+                <li id="left"><input id="search_input" type="text" placeholder="Keresés.."></li>
                 <li id="cart" class="special">Kosár</li>
                 <li><select id="language_select" class="language_select">
                     <option value="HU">HU</option>
@@ -26,12 +26,12 @@
             </ul>
         </nav>
         <article>
-            <h2 id="text1">Üdvözöljük</h2>
-            <p id="text2">Fedezd fel a magyar konyha ízletes világát, ahol a hagyományos fogások és a modern gasztronómiai élmények találkoznak! A [Cég neve] célja, hogy egyszerűbbé és élvezetesebbé tegye számodra a finom ételek rendelését, bármilyen alkalomra.</p>
-            <h3 id="text3">Akciók és kedvezmények</h3>
-            <p id="text4">Ne felejts el körülnézni aktuális akcióink között! Rendszeresen kínálunk kedvezményeket és különleges ajánlatokat, hogy még jobban kihasználhasd a [Cég neve] előnyeit.</p>
-            <h3 id="text5">Rendelj most!</h3>
-            <p id="text6">Legyen szó egy családi vacsoráról, baráti összejövetelről vagy csak egy egyszerű ebédről, a [Cég neve] a tökéletes választás számodra! Kényeztesd magad a legfinomabb magyar ételekkel, és tapasztald meg a gyors és megbízható kiszállítást.</p>
+            <h2>Üdvözöljük</h2>
+            <p>Fedezd fel a magyar konyha ízletes világát, ahol a hagyományos fogások és a modern gasztronómiai élmények találkoznak! A [Cég neve] célja, hogy egyszerűbbé és élvezetesebbé tegye számodra a finom ételek rendelését, bármilyen alkalomra.</p>
+            <h3>Akciók és kedvezmények</h3>
+            <p>Ne felejts el körülnézni aktuális akcióink között! Rendszeresen kínálunk kedvezményeket és különleges ajánlatokat, hogy még jobban kihasználhasd a [Cég neve] előnyeit.</p>
+            <h3>Rendelj most!</h3>
+            <p>Legyen szó egy családi vacsoráról, baráti összejövetelről vagy csak egy egyszerű ebédről, a [Cég neve] a tökéletes választás számodra! Kényeztesd magad a legfinomabb magyar ételekkel, és tapasztald meg a gyors és megbízható kiszállítást.</p>
         </article>
         <aside>
             <div id="panel"></div>
