gif a keretben! több infó

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
         </nav>
         <article>
             <h2>Üdvözöljük</h2>
-            <p>Fedezd fel a magyar konyha ízletes világát, ahol a hagyományos fogások és a modern gasztronómiai élmények találkoznak! A [Cég neve] célja, hogy egyszerűbbé és élvezetesebbé tegye számodra a finom ételek rendelését, bármilyen alkalomra.</p>
+            <p>Fedezd fel a nemzetközi konyha ízletes világát, ahol a hagyományos fogások és a modern gasztronómiai élmények találkoznak! A [Cég neve] célja, hogy egyszerűbbé és élvezetesebbé tegye számodra a finom ételek rendelését, bármilyen alkalomra.</p>
             <h3>Akciók és kedvezmények</h3>
             <p>Ne felejts el körülnézni aktuális akcióink között! Rendszeresen kínálunk kedvezményeket és különleges ajánlatokat, hogy még jobban kihasználhasd a [Cég neve] előnyeit.</p>
             <h3>Rendelj most!</h3>
             <p>Legyen szó egy családi vacsoráról, baráti összejövetelről vagy csak egy egyszerű ebédről, a [Cég neve] a tökéletes választás számodra! Kényeztesd magad a legfinomabb magyar ételekkel, és tapasztald meg a gyors és megbízható kiszállítást.</p>
+            <h3>Miért rendeljen tőlünk?</h3>
+            <p>Rendelj egyszerűen a legjobb éttermekből, és mi házhoz szállítjuk a kedvenc ételeidet gyorsan, kényelmesen, akár 30 percen belül!</p>
+            <ul>
+                <!-- nem tudom mit írjak még ide, majd később rájövök -->
+                <li>több mint 100 étterem közül válogathatsz! Legyen szó külföldi vagy hazai éttermekről</li>
+                <li>Kedvezmények a hűséges vásárlóknak</li>
+                <li>Kényelmes és biztonságos online rendelés és fizetés.</li>
+                <li>Az ételnek nincs lába! rendeld meg a [cég neve]</li>
+            </ul>
         </article>
         <aside>
             <div id="panel"></div>
