főoldal angol nyelvre fordítása és hiba javítások

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-            <a href="./index.html">Ételfutár®</a>
+            <a id="main_page_link">Ételfutár®</a>
         </header>
         <nav>
             <ul>
@@ -22,7 +22,7 @@
                 </select></li>
                 <li id="register" class="special">Regisztrálj</li>
                 <li id="login" class="special">Bejelentkezés</li>
-                <li id="main_page" class="nav_selected" onclick="location.href='./index.html';">Főoldal</li>
+                <li id="main_page" class="nav_selected">Főoldal</li>
             </ul>
         </nav>
         <article>
