--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         <article id="body_elements">
             
         </article>
-        <aside>
-            <div id="panel"></div>
-        </aside>
+        <div id="panel"></div>
+        <div id="cartpanel"></div>
         <footer id="footer_elements">
             
         </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
     <script src="./script/main.js"></script>
-    <script src="./script/register.js"></script>
+    <!--<script src="./script/register.js"></script>
     <script src="./script/login.js"></script>
+    <script src="./script/cart.js"></script>-->
+    <h1 class="offcanvas-title" id="offcanvasWithBackdropLabel" style="text-align: center;"></h1>
 </body>
 </html>
